# mikocss

./: build_pyinstaller.py  main.py  main.spec  readme.md  requirements-build.txt
.github/workflows/: ci-cd.yml  test-quick.yml
.test/: rel
backgrounds/: __init__.py  base.py
borders/: __init__.py  base.py
colors/: base.py  generators.py  utils.py
core/: processor.py  web_processor.py
effects/: __init__.py  base.py
examples/app-gtk/: CMakeLists.txt  main.cpp  miko_color.hpp  miko_layout.hpp  miko_layout_wrapper.hpp  miko_typography.hpp  miko_typography_wrapper.hpp  miko_wrapper.hpp
examples/app-qt5/: CMakeLists.txt  main.cpp  miko_typography.hpp  miko_typography_wrapper.hpp  miko_wrapper.hpp
examples/app-qt6/: CMakeLists.txt  main.cpp  miko_color.hpp  miko_color_list.txt  miko_layout.hpp  miko_layout_wrapper.hpp  miko_typography_wrapper.hpp  miko_wrapper.hpp
generators/: cpp.py  css.py  javascript.py  layout.py  typescript.py  typography.py
layout/: __init__.py  base.py
sizing/: __init__.py  base.py
spacing/: __init__.py  base.py
typography/: base.py
